# OUCTool

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
cmake/: cpr.cmake  imgui.cmake  json.cmake  webview2.cmake  wil.cmake
resources/: app.rc.in
src/: main.cpp  utils.hpp
src/app/: App.cpp  App.h
src/platform/: Window.cpp  Window.h
src/renderer/: Renderer.cpp  Renderer.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h
src/webviewwrapper/: WebViewWrapper.cpp  WebViewWrapper.h
